# centertrack-tensorrt

./: CMakeLists.txt  README.md  buildEngine  pluginconvert.py  tracking
_main_/: CMakeLists.txt  buildEngine.cpp  tracking.cpp
onnx-tensorrt/: CMakeLists.txt  builtin_op_importers.cpp
plugins/: CMakeLists.txt  README.md
plugins/cmake/modules/: find_library_create_target.cmake  set_ifndef.cmake
plugins/include/: NvInferRuntime.h
plugins/lib/: libnvinfer_plugin.so.8
plugins/parsers/onnx/: CMakeLists.txt
plugins/plugin/: CMakeLists.txt  InferPlugin.cpp
plugins/plugin/DCNv2/: DCNv2.cpp  DCNv2.hpp
plugins/plugin/common/: CMakeLists.txt  half.h
plugins/plugin/common/kernels/: CMakeLists.txt  common.cu  maskRCNNKernels.cu  nmsLayer.cu  proposalKernel.cu  sortScoresPerClass.cu  sortScoresPerImage.cu
plugins/plugin/efficientNMSPlugin/: efficientNMSInference.cu
plugins/plugin/instanceNormalizationPlugin/: instanceNormalizationPlugin.cu
track/: CMakeLists.txt  ctTrack.cpp  entroyCalibrator.cpp  trackForwardGPU.cu  utils.cpp
track-include/: argparse.h  ctTrack.h  ctTrackConfig.h  entroyCalibrator.h  trackForwardGPU.h  utils.h
track-include/common/: commons.h
